2008-10-27  Christian Faulhammer  <opfer@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-python): add
	python_need_rebuild function
	(ebuild-mode-keywords-autotools): add WANT_AUTOCONF and
	WANT_AUTOMAKE variables
	(ebuild-mode-keywords-gnome2): add DOCS variable

2008-10-23  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-font-lock-keywords):
	Determine list of variables from obarray.

	* eselect-mode-keywords.el (eselect-mode-font-lock-keywords):
	Likewise.

2008-10-22  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Move face
	definitions to individual variables.
	(ebuild-mode-font-lock-keywords): New variable; move actual call
	of font-lock-add-keywords to gentoo-syntax.el.

	* eselect-mode-keywords.el (eselect-mode-keywords-*)
	(eselect-mode-font-lock-keywords): Likewise.

	* gentoo-syntax.el (ebuild-mode-menu): Remove pointless submenus
	for keyword manipulation.
	(ebuild-mode-arch-regexp): Rename from ebuild-mode-keywords-regexp
	to avoid confusion with variables for syntactic keywords.

2008-10-22  Christian Faulhammer  <opfer@gentoo.org>

	* ebuild-mode-keywords.el
	(ebuild-mode-keywords-eclass-documentation): add documentation
	strings of eclasses.  Still needs some work as comment-face will
	always override it
	(ebuild-mode-keywords-bzr): add bzr.eclass functions, though not
	officially in the tree, it will get there soon

2008-10-21  Christian Faulhammer  <opfer@gentoo.org>

	* ebuild-mode-keywords.el
	(ebuild-mode-keywords-mercurial): add mercurial_fetch()
	(ebuild-mode-keywords-git): add git_fetch() and git_bootstrap
	(ebuild-mode-keywords-subversion): rename subversion_svn_fetch()
	to subversion_fetch() (eclass has changed)
	(ebuild-mode-keywords-distutils): add distutils_src_unpack() as it
	is used sometimes
	(ebuild-mode-keywords-python): add python_get_{lib,site}dir
	(ebuild-mode-keywords-functions-eapi2): Add functions introduced
	with EAPI=2